edit to get sync to work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
     <%= render "shared/sidebar" %>
 
     <div class="page-loader">
+      <%= include_sync_config %>
       <div class="preloader-lg"></div>
     </div>
 
