--- a/app/views/pages/active_responders.html.erb
+++ b/app/views/pages/active_responders.html.erb
@@ -30,50 +30,196 @@
           <div class="box-body">
             <table id="rs_data_td"class="table table-bordered">
               <tr>
-                <th> style="width: 10px">ID:</th>
-                <th>Responder:</th>
+                <th>Name:</th>
                 <th>Body Temp:</th>
                 <th>Heart Rate:</th>
                 <th style="width: 10px">Location:</th>
               </tr>
               <tr>
-                <td>1.</td>
                 <td>John Doe</td>
                 <td>
                   <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar11" style="width: 20%"></div>
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                    <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                    <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
                   </div>
                   <span class="badge bg-red">20%</span>
                 </td>
-                <td id="4"><span class="badge bg-red">80%</span></td>
-                <td id="5">
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                </td>
+              </tr>
+              <tr>
+                <td>John Doe</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                  </div>
+                  <span class="badge bg-red">20%</span>
+                </td>
+                <td>
                 </td>
               </tr>
             </table>
           </div><!-- /.box-body -->
-          <script>
-                function gen_table() {
-                    var res_id = "12345";
-                    var name = "Joe";
-                    var table = document.getElementById("rs_data_td");
-                    var row = table.insertRow(-1);
-                    var cell1 = row.insertCell(0);
-                    var cell2 = row.insertCell(1);
-                    var cell3 = row.insertCell(2);
-                    var cell4 = row.insertCell(3);
-                    var cell5 = row.insertCell(4);
-                    cell1.innerHTML = res_id;
-                    cell2.innerHTML = name;
-                    cell3.innerHTML = "8";
-                    cell4.innerHTML = "4";
-                    cell5.innerHTML = "5";
-                }
-              var res_total= 100;
-            var i;
-            for(i = 0; i < res_total; i++){
-              document.innerHTML = gen_table()
-            }  
-          </script>a
+          <div class="box-footer no-padding">
+            <div class="mailbox-controls">
+              <div class="btn-group">
+              </div>
+                <div class="pull-right">
+                1-50/200
+                <div class="btn-group">
+                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
+                  <button class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
+                </div><!-- /.btn-group -->
+              </div><!-- /.pull-right -->
+            </div>
+          </div>
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
 
