removed sync, faye

--- a/app/views/pages/active_responders.html.erb
+++ b/app/views/pages/active_responders.html.erb
@@ -30,7 +30,7 @@
           <div class="box-body">
             <table id="rs_data_td"class="table table-bordered">
               <tr>
-                <th>Name:</th>
+                <th>Responderf</th>
                 <th>Body Temp:</th>
                 <th>Heart Rate:</th>
                 <th style="width: 10px">Location:</th>
