--- a/app/views/pages/Overview_map.html.erb
+++ b/app/views/pages/Overview_map.html.erb
@@ -20,31 +20,29 @@
     <div id="mapid"style="height:100vh;">
     </div>
 
-<script type ='text/javascript'>
+<script src="/plugins/maps/map1.js"></script>
 
-
+/*
 if (navigator.geolocation) {
   navigator.geolocation.getCurrentPosition(function(position){
-    var latitude = position.coords.latitude;
-    var longitude = position.coords.longitude;
   });
 
-var map = L.map('map')
+}else {
+alert("Geolocation API is not supported in your browser. :(");
+}
+
+var mymap = L.map('mapid').setView([31.2, -91.1],14);
 L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
 attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
 maxZoom: 20,
 id: 'mapbox.streets',
 accessToken: 'pk.eyJ1IjoicmVzcXVlbWUiLCJhIjoiY2pkZG91aDNuMDRsMDJ3bmpnOGJpNGNlNyJ9.hwp2QeD6easWjlAlaEIJ2w'
-}).addTo(map);
+}).addTo(mymap);
 
-map.locate({setView: true, maxZoom: 20});
+mymap.locate({setView: true});
 
-}else {
-  alert("Geolocation API is not supported in your browser. :(");
-  }
+*/
 
-
-</script>
 
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
