active responders table

--- a/app/views/pages/active_responders.html.erb
+++ b/app/views/pages/active_responders.html.erb
@@ -28,183 +28,35 @@
 
         <div class="box" data-aos="fade-up">
           <div class="box-body">
-            <table id="rs_data_td"class="table table-bordered">
+            <table id="rs_data_td" class="table table-bordered">
               <tr>
-                <th>Responderf</th>
-                <th>Body Temp:</th>
-                <th>Heart Rate:</th>
+                <th style="width: 10px">Responder</th>
+                <th style="width: 10px">Body Temp:</th>
+                <th style="width: 10px">Heart Rate:</th>
                 <th style="width: 10px">Location:</th>
               </tr>
+
               <tr>
-                <td>John Doe</td>
+                <td id="name_1" style="text-align: center"></td>
                 <td>
                   <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
+                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                    <span class="badge bg-red">20%</span>
+                    <span id="body_1" class="badge bg-warning" style="background-color: green">0%</span>
                 </td>
                 <td>
                   <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
+                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                    <span class="badge bg-red">20%</span>
+                    <span id="heart_1" class="badge bg-warning" style="background-color: green">0%</span>
                 </td>
-                <td>
+                <td style="text-align: center">
+                  <i class="fa fa-street-view"></i><br>
+                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
+                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
                 </td>
               </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar1" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs">
-                    <div class="progress-bar progress-bar-danger" id="bar2" style="width: 20%"></div>
-                  </div>
-                  <span class="badge bg-red">20%</span>
-                </td>
-                <td>
-                </td>
-              </tr>
+
             </table>
           </div><!-- /.box-body -->
           <div class="box-footer no-padding">
@@ -212,7 +64,7 @@
               <div class="btn-group">
               </div>
                 <div class="pull-right">
-                1-50/200
+                  1-10/200
                 <div class="btn-group">
                   <button class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
                   <button class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
@@ -222,4 +74,15 @@
           </div>
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
+
+<script>
+  var name1;
+  if (name1 === undefined) {
+      document.getElementById("name_1").innerHTML = ' ';
+  }else{
+      document.getElementById("name_1").innerHTML = name1;
+  }
+</script>
+
+
 
