--- a/app/views/pages/Overview_map.html.erb
+++ b/app/views/pages/Overview_map.html.erb
@@ -20,7 +20,7 @@
     <div id="mapid"style="height:100vh;">
     </div>
 
-<script src="/plugins/maps/map1.js"></script>
+<script src="/plugins/maps/activeMap.js"></script>
 
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
