--- a/app/assets/stylesheets/admin/components/page-loader.less
+++ b/app/assets/stylesheets/admin/components/page-loader.less
@@ -6,9 +6,9 @@
   background: @body-bg;
   position: absolute;
   top: 60px;
-  left: 0;
+  left: 0px;
   width: 100%;
-  z-index: 90;
+  z-index: 90px;
   display: none;
 
   .preloader-lg {
