--- a/app/views/pages/active_responders.html.erb
+++ b/app/views/pages/active_responders.html.erb
@@ -28,27 +28,90 @@
 
         <div class="box" data-aos="fade-up">
           <div class="box-body">
-            <table id="rs_data_td" class="table table-bordered">
-              <tr>
+            <table id="rs_data_td" class="table table-no-bordered">
+              <tr style="background-color: #234ec5; color: white">
                 <th style="width: 10px">Responder</th>
-                <th style="width: 10px">Body Temp:</th>
-                <th style="width: 10px">Heart Rate:</th>
-                <th style="width: 10px">Location:</th>
+                <th style="width: 10px">Body Temp</th>
+                <th style="width: 10px">Heart Rate</th>
+                <th style="width: 10px">Location</th>
+              </tr>
+
+              <tr style="background-color: whitesmoke">
+                <td id="name_1" style="text-align: center">hihi</td>
+                <td>
+                  <div class="progress progress-xs" style="background-color: lightgray">
+                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 40%; background-color: green"></div>
+                  </div>
+                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs" style="background-color: lightgray">
+                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                  </div>
+                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
+                </td>
+                <td style="text-align: center">
+                  <i class="fa fa-street-view"></i><br>
+                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
+                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
+                </td>
               </tr>
 
               <tr>
-                <td id="name_1" style="text-align: center"></td>
+                <td id="name_1" style="text-align: center">Joe Bean</td>
                 <td>
                   <div class="progress progress-xs">
                     <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                    <span id="body_1" class="badge bg-warning" style="background-color: green">0%</span>
+                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
                 </td>
                 <td>
                   <div class="progress progress-xs">
                     <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
-                    <span id="heart_1" class="badge bg-warning" style="background-color: green">0%</span>
+                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
+                </td>
+                <td style="text-align: center">
+                  <i class="fa fa-street-view"></i><br>
+                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
+                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
+                </td>
+              </tr>
+
+              <tr style="background-color: whitesmoke">
+                <td id="name_1" style="text-align: center">hihi</td>
+                <td>
+                  <div class="progress progress-xs" style="background-color: lightgray">
+                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 40%; background-color: green"></div>
+                  </div>
+                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs" style="background-color: lightgray">
+                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                  </div>
+                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
+                </td>
+                <td style="text-align: center">
+                  <i class="fa fa-street-view"></i><br>
+                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
+                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
+                </td>
+              </tr>
+
+              <tr>
+                <td id="name_1" style="text-align: center">Joe Bean</td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                  </div>
+                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
+                </td>
+                <td>
+                  <div class="progress progress-xs">
+                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
+                  </div>
+                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
                 </td>
                 <td style="text-align: center">
                   <i class="fa fa-street-view"></i><br>
@@ -76,7 +139,7 @@
 </div><!-- /.content-wrapper -->
 
 <script>
-  var name1;
+  var name1= hi;
   if (name1 === undefined) {
       document.getElementById("name_1").innerHTML = ' ';
   }else{
