--- a/app/views/pages/active_responders.html.erb
+++ b/app/views/pages/active_responders.html.erb
@@ -37,56 +37,14 @@
               </tr>
 
               <tr style="background-color: whitesmoke">
-                <td id="name_1" style="text-align: center">hihi</td>
+                <td id="name_1" style="text-align: center"></td>
                 <td>
                   <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 40%; background-color: green"></div>
-                  </div>
-                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
-                </td>
-                <td>
-                  <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
-                </td>
-                <td style="text-align: center">
-                  <i class="fa fa-street-view"></i><br>
-                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
-                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
-                </td>
-              </tr>
-
-              <tr>
-                <td id="name_1" style="text-align: center">Joe Bean</td>
-                <td>
-                  <div class="progress progress-xs">
                     <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
                   <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
                 </td>
                 <td>
-                  <div class="progress progress-xs">
-                    <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
-                  </div>
-                  <span id="heart_1" class="badge bg-warning" style="background-color: green">0bpm</span>
-                </td>
-                <td style="text-align: center">
-                  <i class="fa fa-street-view"></i><br>
-                  <div id="la_1" style="font-size: 12px; text-align: left">La:</div>
-                  <div id="lo_1" style="font-size: 12px; text-align: left">Lo:</div>
-                </td>
-              </tr>
-
-              <tr style="background-color: whitesmoke">
-                <td id="name_1" style="text-align: center">hihi</td>
-                <td>
-                  <div class="progress progress-xs" style="background-color: lightgray">
-                    <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 40%; background-color: green"></div>
-                  </div>
-                  <span id="body_1" class="badge bg-warning" style="background-color: green">0°F</span>
-                </td>
-                <td>
                   <div class="progress progress-xs" style="background-color: lightgray">
                     <div id="heartb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
                   </div>
@@ -100,7 +58,7 @@
               </tr>
 
               <tr>
-                <td id="name_1" style="text-align: center">Joe Bean</td>
+                <td id="name_1" style="text-align: center"></td>
                 <td>
                   <div class="progress progress-xs">
                     <div id="bodyb_1" class="progress-bar progress-bar-danger" style="width: 0%; background-color: green"></div>
