first commit of responder_gps

--- a/app/views/pages/Responder_gps.html.erb
+++ b/app/views/pages/Responder_gps.html.erb
@@ -23,13 +23,13 @@
 
       </div>
     </div>
-    <div class= "col-sm-6" style="left: 10px; top: 10px;">
-      <div id="mapid2" style="height:100vh;">
+    <div class= "col-sm-9" style="top: 10px;">
+      <div id="mapid" style="height:98vh;">
       </div>
     </div>
   </div>
 
-    <script src="/plugins/maps/activeMap.js"></script>
+    <script src="/plugins/maps/map1.js"></script>
 
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
