first commit of responder_gps

--- a/app/views/pages/Responder_gps.html.erb
+++ b/app/views/pages/Responder_gps.html.erb
@@ -18,13 +18,13 @@
   <!-- Main content -->
   <section class="content" style="height: 101vh">
   <div class="row">
-    <div class= "col-sm-3" style="left: 10px; top: 10px;">
-      <div class="box" style="height: 98vh">
+    <div class= "col-sm-3" style="left: 15px; top: 15px;">
+      <div class="box" style="height: 97vh">
 
       </div>
     </div>
-    <div class= "col-sm-9" style="top: 10px;">
-      <div id="mapid" style="height:98vh;">
+    <div class= "col-sm-9" style="top: 15px; left: -15px;">
+      <div id="mapid" style="height:97vh;">
       </div>
     </div>
   </div>
