--- a/app/views/pages/Responder_gps.html.erb
+++ b/app/views/pages/Responder_gps.html.erb
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-    <script src="/plugins/maps/map1.js"></script>
+    <script src="/plugins/maps/rMap.js"></script>
 
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
