--- a/app/views/pages/Vehicle_gps.html.erb
+++ b/app/views/pages/Vehicle_gps.html.erb
@@ -15,6 +15,25 @@
   </section>
   <!-- Main content -->
   <section class="content">
+      <div class="row">
+        <div class= "col-sm-3" style="left: 15px; top: 15px;">
+          <div class="box" style="height: 97vh; overflow: auto">
+            <div class="list-group">
+              <a class="list-group-item list-group-item-action active"> Responders </a>
+              <button type="button" class="list-group-item list-group-item-action">Zach Newman</button>
+              <button type="button" class="list-group-item list-group-item-action">Bill Dick</button>
+              <button type="button" class="list-group-item list-group-item-action">What are those</button>
+            </div>
+          </div>
+        </div>
+        <div class= "col-sm-9" style="top: 15px; left: -15px;">
+          <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray">
+
+          </div>
+        </div>
+      </div>
+
+      <script src="/plugins/maps/vMap.js"></script>
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
 
