--- a/app/views/pages/Dashboard.html.erb
+++ b/app/views/pages/Dashboard.html.erb
@@ -1,13 +1,11 @@
 <% content_for :before_scripts do %>
-<link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
 <% end %>
-
 <div class="content-wrapper dashboard-page">
   <section class="content-header">
     <div class="row">
       <div class="col-sm-6 col-xs-12">
         <h1 class="page-title">
-          Dashboard
+          Help Me
         </h1>
 
       </div>
@@ -15,6 +13,6 @@
   </section>
   <!-- Main content -->
   <section class="content">
+
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
-
