--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,13 @@
 <% content_for :before_scripts do %>
+<link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
 <% end %>
+
 <div class="content-wrapper dashboard-page">
   <section class="content-header">
     <div class="row">
       <div class="col-sm-6 col-xs-12">
         <h1 class="page-title">
-          Help Me
+          Dashboard
         </h1>
 
       </div>
@@ -13,6 +15,6 @@
   </section>
   <!-- Main content -->
   <section class="content">
-
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
+
