--- a/app/assets/stylesheets/admin/modules/core.less
+++ b/app/assets/stylesheets/admin/modules/core.less
@@ -22,7 +22,7 @@ body {
 .wrapper {
   .clearfix();
   min-height: 100%;
-  min-height: 1000px; // customizable
+  max-height: 100%; // customizable
   position: relative;
   overflow: hidden;
   .layout-boxed & {
