browser check, fixed ajax unclosed script

--- a/app/views/pages/Responder_gps.html.erb
+++ b/app/views/pages/Responder_gps.html.erb
@@ -1,7 +1,8 @@
 <% content_for :before_scripts do %>
+  <script src="/plugins/broswer/browser_ck.js"></script>
   <link rel="stylesheet" href="/plugins/leaflet/leaflet.css"
   <link rel="stylesheet" href="/plugins/leaflet/maps.css"
-  <script src="/plugins/leaflet/leaflet.js"</script>
+  <script src="/plugins/leaflet/leaflet.js"></script>
 <% end %>
 
 <div class="content-wrapper dashboard-page">
