--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
 <% end %>
 
-<div class="content-wrapper dashboard-page" style="background-color: #0c0c0c; max-height: 100vh; height: 100vh;">
+<div class="content-wrapper dashboard-page">
   <section class="content-header">
     <div class="row">
       <div class="col-sm-6 col-xs-12">
