--- a/app/views/pages/Overview_map.html.erb
+++ b/app/views/pages/Overview_map.html.erb
@@ -1,7 +1,7 @@
 <% content_for :before_scripts do %>
   <link rel="stylesheet" href="/plugins/leaflet/leaflet.css"
   <link rel="stylesheet" href="/plugins/leaflet/maps.css"
-  <script src="/plugins/leaflet/leaflet.js"</script>
+  <script src="/plugins/leaflet/leaflet.js"></script>
 <% end %>
 
 <div class="content-wrapper dashboard-page">
