--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -24,7 +24,7 @@
             <%end%>
           </li>
           <li>
-            <%= link_to page_path(page: "Responder_gps"), data: {pjax: true} do %>
+            <%= link_to page_path(page: "Responder_gpsM"), data: {pjax: true} do %>
               <i class="fa fa-compass"></i>
               Responders GPS
             <%end%>
