--- a/app/views/pages/Responder_gpsM.html.erb
+++ b/app/views/pages/Responder_gpsM.html.erb
@@ -17,21 +17,34 @@
     </div>
   </section>
   <!-- Main content -->
-  <section class="content" style="height: 101vh">
+  <section class="content" style="height: 100vh">
   <div class="row">
-    <div class= "col-sm-3" style="left: 15px; top: 15px;">
-      <div class="box" style="height: 97vh; overflow: auto">
-        <div class="list-group">
-          <a class="list-group-item list-group-item-action active"> Responders </a>
-          <button type="button" class="list-group-item list-group-item-action">Zach Newman</button>
-          <button type="button" class="list-group-item list-group-item-action">Bill Dick</button>
-          <button type="button" class="list-group-item list-group-item-action">What are those</button>
+    <div class= "col-xs-12" style="top: 15px; width: 96%; left:4%">
+      <div class="row">
+        <div class="col-xs-4">
+          <div class="box" style="height: 97vh; overflow: auto">
+            <div class="list-group">
+              <a class="list-group-item list-group-item-action active"> Responders: </a>
+              <form action="#" method="get">
+                <div class="input-group input-group-sm">
+                  <input type="text" name="q" class="form-control" placeholder="Search...">
+                  <span class="input-group-btn">
+                    <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </span>
+                </div>
+              </form>
+              <button type="button" class="list-group-item list-group-item-action" style="text-align: center">Zach Newman</button>
+              <button type="button" class="list-group-item list-group-item-action" style="text-align: center">Bill Dick</button>
+              <button type="button" class="list-group-item list-group-item-action" style="text-align: center">What are those</button>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class= "col-sm-9" style="top: 15px; left: -15px;">
-      <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray">
-
+        <div class="col-xs-8" style="left: -30px">
+          <div id="mapid" style="height:97vh;box-shadow: 5px 5px 10px lightgray;">
+          </div>
+        </div>
       </div>
     </div>
   </div>
