--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -24,19 +24,19 @@
             <%end%>
           </li>
           <li>
-            <%= link_to page_path(page: "Responder_gpsM"), data: {pjax: true} do %>
+            <%= link_to page_path(page: "responder_gpsm"), data: {pjax: true} do %>
               <i class="fa fa-compass"></i>
               Responders GPS
             <%end%>
           </li>
           <li>
-            <%= link_to page_path(page: "Vehicle_gps"), data: {pjax: true} do %>
+            <%= link_to page_path(page: "vehicle_gps"), data: {pjax: true} do %>
               <i class="fa fa-car"></i>
               Vehicle GPS
             <%end%>
           </li>
           <li>
-            <%= link_to page_path(page: "Overview_map"), data: {pjax: true} do %>
+            <%= link_to page_path(page: "overview_map"), data: {pjax: true} do %>
               <i class="fa fa-map"></i>
               Overview Map
             <%end%>
