--- a/app/views/pages/tos.html.erb
+++ b/app/views/pages/tos.html.erb
@@ -17,7 +17,64 @@
     <div class="box">
 
       <div class="box-body">
-        RescueMe, the developers, and project designers are not liable for failures of the system. Every possible attempt will made to provide the best product possible, but this is an ongoing project.
+        ResqueMe Terms of Service
+        Please read these terms of service ("terms", "terms of service") carefully before using resqueme.org (the "service") operated by ResqueMe ("us", 'we", "our").
+        <br><br>
+        Conditions of Use
+        <br>
+        We will provide their services to you, which are subject to the conditions stated below in this document which
+        may change at any time. Every time you visit this website, or use our services,, you accept the following
+        conditions. The service provided by ResqueMe is on a best effort basis. We make no promises, express or implied,
+        about the service or the data provided.
+        <br><br>
+        Privacy Policy
+        <br>
+        We do not sell any data collected on this site. The only time data collected would be given to third parties
+        would be upon official request for legal, educational, or documentation reasons relating to a disaster,
+        emergency or event.
+        <br><br>
+        Copyright
+        <br>
+        The entire compilation of the content found on this website is the exclusive property of ResqueMe.
+        <br><br>
+        Communications
+        <br>
+        The entire communication with us is electronic. Every time you send us an email or visit our website, you are
+        going to be communicating with us. You hereby consent to receive communications from us. You agree that all
+        notices, disclosures, agreements and other communications we provide to you electronically meet the legal
+        requirements that such communications be in writing.
+        <br><br>
+        Applicable Law
+        <br>
+        By visiting this website, you agree that the laws of the Texas, without regard to principles of conflict laws
+        of lesser states, will govern these terms of service, or any dispute of any sort that might come between
+        ResqueMe and you, or its business partners and associates.
+        <br><br>
+        Disputes
+        <br>
+        Any dispute related in any way to your visit to this website or to products you purchase from us shall be
+        arbitrated by state or federal court local to the ResqueMe administrators or developers, at your cost, and you
+        consent to exclusive jurisdiction and venue of such courts.
+        <br><br>
+        Content
+        <br>
+        Visitors may post content as long as it is not obscene, illegal, defamatory, threatening, infringing of
+        intellectual property rights, invasive of privacy or injurious in any other way to third parties. Content has
+        to be free of software viruses, political campaign, and commercial solicitation.
+        We reserve all rights (but not the obligation) to remove and/or edit anything.
+        <br><br>
+        License and Site Access
+        <br>
+        We grant you a limited license to access and make use of this website. You are not allowed to download or
+        modify it. This may be done only with written consent from us.
+        <br><br>
+        User Account
+        <br>
+        If you are an owner of an account on this website, you are solely responsible for maintaining the
+        confidentiality of your private user details (username and password). You are responsible for all activities
+        that occur under your account or password.
+        <br>
+        We reserve all rights to terminate accounts, and edit or remove content at our sole discretion.
       </div><!-- /.box-body -->
 
     </div><!-- /.box -->
