--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,7 +1,3 @@
-<% content_for :before_scripts do %>
-<link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
-<% end %>
-
 <div class="content-wrapper dashboard-page">
   <section class="content-header">
     <div class="row">
@@ -14,7 +10,18 @@
     </div>
   </section>
   <!-- Main content -->
-  <section class="content"; style="color:black;">
+  <section class="content"; style="color:black">
+    <span style="margin-left:2em">
+    About
+    <br><br>
+    ResqueMe is a browser based application designed to facilitate communication, coordination, collaboration,
+    <br>
+    and situational awareness during large scale disasters. The concept was inspired following the destruction of
+    <br>
+    hurricanes Harvey, Irma, and Maria. The developers are Zach Newman and Joseph Tye.
+    <br><br>
+    Contact: resqueme@protonmail.com
+    </span>
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
 
