--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -47,6 +47,6 @@
   <script src="/plugins/jQuery/jQuery-2.1.4.min.js"></script>
   <script src="/plugins/bootstrap/js/bootstrap.min.js"></script>
   <script src="/plugins/iCheck/icheck.min.js"></script>
-  <script src="/assets/pages/login.js"></script>
+  <script src="/assets/javascripts/pages/login.js"></script>
 <% end %>
 
