--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -10,18 +10,22 @@
     </div>
   </section>
   <!-- Main content -->
-  <section class="content"; style="color:black">
-    <span style="margin-left:2em">
-    About
-    <br><br>
-    ResqueMe is a browser based application designed to facilitate communication, coordination, collaboration,
-    <br>
-    and situational awareness during large scale disasters. The concept was inspired following the destruction of
-    <br>
-    hurricanes Harvey, Irma, and Maria. The developers are Zach Newman and Joseph Tye.
-    <br><br>
-    Contact: resqueme@protonmail.com
-    </span>
+  <!-- Main content -->
+  <section class="content">
+    <!-- Default box -->
+    <div class="box">
+
+      <div class="box-body">
+      About
+      <br><br>
+      ResqueMe is a browser based application designed to facilitate communication, coordination, collaboration,
+      <br>
+      and situational awareness during large scale disasters. The concept was inspired following the destruction of
+      <br>
+      hurricanes Harvey, Irma, and Maria. The developers are Zach Newman and Joseph Tye.
+      <br><br>
+      Contact: resqueme@protonmail.com
+      </div><!-- /.box-body -->
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
 
