map updates/ change js sources

--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -48,6 +48,7 @@
     </div>
   </div>
 
+    <script src="/plugins/maps/mapBase.js"></script>
     <script src="/plugins/maps/rMap.js"></script>
 
   </section><!-- /.content -->
