--- a/app/views/vehiclegps/index.html.erb
+++ b/app/views/vehiclegps/index.html.erb
@@ -48,7 +48,9 @@
       </div>
     </div>
 
-      <script src="/plugins/maps/vMap.js"></script>
+    <script src="/plugins/maps/mapBase.js"></script>
+    <script src="/plugins/maps/vMap.js"></script>
+
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
 
