--- a/app/views/active_responders/index.html.erb
+++ b/app/views/active_responders/index.html.erb
@@ -31,7 +31,7 @@
             <table id="rs_data_td" class="table table-no-bordered">
               <tr style="background-color: #234ec5; color: white">
                 <th style="width: 10px">Responder</th>
-                <th style="width: 10px">Body Temp</th>
+                <th style="width: 10px">Temp</th>
                 <th style="width: 10px">Heart Rate</th>
                 <th style="width: 10px">Location</th>
               </tr>
