connected db to view

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -11,13 +11,11 @@
   </section>
   <!-- Main content -->
   <!-- Main content -->
-  <section class="content">
+  <section class="content" style="height: 100vh">
     <!-- Default box -->
     <div class="box">
-
-      <div class="box-body">
-      About
-      <br><br>
+    <img src="/plugins/images/fire_fighter.jpg" style="width: 100%; height: 100vh;">
+    <div style="position: absolute; top: 50%; left: 50%; color: white;"  <br><br>
       ResqueMe is a browser based application designed to facilitate communication, coordination, collaboration,
       <br>
       and situational awareness during large scale disasters. The concept was inspired following the destruction of
@@ -25,6 +23,7 @@
       hurricanes Harvey, Irma, and Maria. The developers are Zach Newman and Joseph Tye.
       <br><br>
       Contact: resqueme@protonmail.com
+    </div>
       </div><!-- /.box-body -->
   </section><!-- /.content -->
 </div><!-- /.content-wrapper -->
