--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <a href="/pages/index.html" class="logo">
+  <a href="/dashboard/index.html" class="logo">
     <span class="logo-lg">ResqueMe</span>
   </a>
   <nav class="navbar navbar-static-top" role="navigation">
