--- a/app/views/respondersgps/index.html.erb
+++ b/app/views/respondersgps/index.html.erb
@@ -17,6 +17,7 @@
   </section>
   <!-- Main content -->
   <section class="content" style="height: 100vh">
+
   <div class="row">
     <div class= "col-xs-12" style="top: 15px; width: 96%; left:4%">
       <div class="row">
@@ -47,6 +48,12 @@
       </div>
     </div>
   </div>
+
+    <% Respondernode.all.each do |respondern| %>
+      <%= respondern.lat %>
+      <%= respondern.long %>
+    <%end%>
+
     <script src="/plugins/maps/mapBase.js"></script>
     <script src="/plugins/maps/rMap.js"></script>
 
