--- a/app/views/vehiclegps/index.html.erb
+++ b/app/views/vehiclegps/index.html.erb
@@ -34,10 +34,10 @@
                   </span>
                   </div>
                 </form>
-                <button type="button" class="list-group-item list-group-item-action" style="text-align: center">Zach Newman</button>
-                <button type="button" class="list-group-item list-group-item-action" style="text-align: center">Bill Dick</button>
-                <button type="button" class="list-group-item list-group-item-action" style="text-align: center">What are those</button>
-              </div>
+                <% Vehicle.all.each do |vehicle| %>
+                <button type="button" class="list-group-item list-group-item-action" style="text-align: center"><%=vehicle.plate_num%></button>
+                  <%end%>
+                  </div>
             </div>
           </div>
           <div class="col-xs-8" style="left: -30px">
